--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -24,30 +24,21 @@
                     <h2>ENTREES</h2>
                         <div class="descript-menu">
                             <h3>Terrine de poulpes acidulés</h3>
-                            <p>Aux zests d'orange</p>
-                            <div class="tarif">
-                                <p>25€</p>
-                            </div>
+                            <p>Aux zests d'orange<span>25€</span></p>
                             <div class="anim-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="descript-menu">
                             <h3>Velouté de légumes d'antan</h3>
-                            <p>Carottes, panais, topinambour</p>
-                            <div class="tarif">
-                                <p>35€</p>
-                            </div>
+                            <p>Carottes, panais, topinambour<span>35€</span></p>
                             <div class="anim-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
                         <div class="descript-menu">
                             <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
-                            <div class="tarif">
-                                <p>20€</p>
-                            </div>
+                            <p>Revisitée<span>20€</span></p>
                             <div class="anim-container">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -55,30 +46,21 @@
                     <h2>PLATS</h2>
                     <div class="descript-menu">
                         <h3>Coquilles Saint-Jacques</h3>
-                        <p>Accompagnés d'une purée de panais</p>
-                        <div class="tarif">
-                            <p>40€</p>
-                        </div>
+                        <p>Accompagnés d'une purée de panais<span>40€</span></p>
                         <div class="anim-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="descript-menu">
                         <h3>Magret de canard</h3>
-                        <p>Et parmentier de pommes de terres</p>
-                        <div class="tarif">
-                            <p>35€</p>
-                        </div>
+                        <p>Et parmentier de pommes de terres<span>35€</span></p>
                         <div class="anim-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
                     <div class="descript-menu">
                         <h3>Pigeonneau d'îlle-et-vilaine</h3>
-                        <p>Sur son lit de gnocchis aux légumes</p>
-                        <div class="tarif">
-                            <p>44€</p>
-                        </div>
+                        <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
                         <div class="anim-container">
                             <i class="fas fa-check-circle"></i>
                         </div>
@@ -86,30 +68,21 @@
                 <h2>DESSERTS</h2>
                 <div class="descript-menu">
                     <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes</p>
-                    <div class="tarif">
-                        <p>18€</p>
-                    </div>
+                    <p>Et purée de noisettes<span>18€</span></p>
                     <div class="anim-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="descript-menu">
                     <h3>Fondant au chocolat</h3>
-                    <p>Revisitée</p>
-                    <div class="tarif">
-                        <p>22€</p>
-                    </div>
+                    <p>Revisitée<span>22€</span></p>
                     <div class="anim-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
                 </div>
                 <div class="descript-menu">
                     <h3>Mille-feuilles croustillant</h3>
-                    <p>Myrtilles et pâte d'amande</p>
-                    <div class="tarif">
-                        <p>23€</p>
-                    </div>
+                    <p>Myrtilles et pâte d'amande<span>23€</span></p>
                     <div class="anim-container">
                         <i class="fas fa-check-circle"></i>
                     </div>
