--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -22,48 +22,79 @@
                     <i class="icone-vide-menu far fa-heart"></i>
                     <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
-                <h2>ENTREES</h2>
-                <div class="plat">
-                    <h3>Ravioles de foie gras</h3>
-                    <h4>Accompagnés de leur crème à la truffe<span class="tarif">25€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Caviar osciètre</h3>
-                    <h4>Sur blini à la farine de blé noir<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Homard et espuma de ...</h3>
-                    <h4>Marinée aux zests d'orange<span class="tarif">20€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <h4>Confiture de figue et pain toasté<span class="tarif">35€</span></h4>
-                </div>
-                <h2>PLATS</h2>
-                <div class="plat">
-                    <h3>Noix de coquille Saint-Jacques</h3>
-                    <h4>Sur lit de purée de céleri-rave<span class="tarif">40€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Langoustine pôélée</h3>
-                    <h4>Purée de patate douce<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Mijoté de queue de boeuf</h3>
-                    <h4>Et riz sauvage aux zests de citron<span class="tarif">44€</span></h4>
-                </div>
+                <div class="carte-menu">    
+                    <h2>ENTREES</h2>
+                        <div class="descript-menu">
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe<span>25€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Caviar oscière</h3>
+                            <p>Sur blini à la farine de blé noir<span>35€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Homard et espuma de ...</h3>
+                            <p>Marinée aux zests d'orange<span>20€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figues et pain toasté<span>35€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    <h2>PLATS</h2>
+                    <div class="descript-menu">
+                        <h3>Noix de coquille Saint-Jacques</h3>
+                        <p>Sur lit de purée de cèleri-rave<span>40€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Langoustine poêlée</h3>
+                        <p>Purée de patates douce<span>35€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Mijoté de queue de boeuf</h3>
+                        <p>Et riz sauvageaux zests de citron<span>44€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                 <h2>DESSERTS</h2>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Macaron noisette et chocolat</h3>
-                    <h4>Glace au caramel brun et sel de Guérande<span class="tarif">18€</span></h4>
+                    <p>Glace au caramel brun et sel de guérande<span>18€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Baba au rhum revisité</h3>
-                    <h4>Et son coulis de citron<span class="tarif">22€</span></h4>
+                    <p>Avec son coulis de citron<span>22€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Tarte au citron meringuée</h3>
-                    <h4>Destructurée<span class="tarif">23€</span></h4>
+                    <p>Destructurée<span>23€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="bouton">
                     <a href="#">Commander</a>
