--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -22,44 +22,72 @@
                     <i class="icone-vide-menu far fa-heart"></i>
                     <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
-                <h2>ENTREES</h2>
-                <div class="plat">
-                    <h3>Fricassée d'escargot</h3>
-                    <h4>Au piment d'espelette<span class="tarif">25€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Foie gras de canard mi-cuit</h3>
-                    <h4>Et ses copeaux de truffes noire<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Oeuf au plat</h3>
-                    <h4>Assaisonnée à la truffe sur lit de ...<span class="tarif">20€</span></h4>
-                </div>
-                <h2>PLATS</h2>
-                <div class="plat">
-                    <h3>Filet de boeuf aux herbes</h3>
-                    <h4>Accompagnées de sa ribambelle de légumes<span class="tarif">40€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Parmentier de queue de boeuf</h3>
-                    <h4>A la truffe noire sur sa purée de panais<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Filet de Turbot</h3>
-                    <h4>Aux agrumes<span class="tarif">44€</span></h4>
-                </div>
+                <div class="carte-menu">    
+                    <h2>ENTREES</h2>
+                        <div class="descript-menu">
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Aux piments d'espelette<span>25€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffes noire<span>35€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar<span>20€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    <h2>PLATS</h2>
+                    <div class="descript-menu">
+                        <h3>Filets de boeuf aux herbes</h3>
+                        <p>Accompagnés de sa ribambelle de légumes<span>40€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Parmentier de queue de boeuf</h3>
+                        <p>A la truffe noire sur sa purée de panais<span>35€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Filet de turbot</h3>
+                        <p>Aux agrumes<span>44€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                 <h2>DESSERTS</h2>
-                <div class="plat">
-                    <h3>Paris-brest</h3>
-                    <h4>Revisité<span class="tarif">18€</span></h4>
+                <div class="descript-menu">
+                    <h3>Paris-Brest</h3>
+                    <p>Revisitée<span>18€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Macaron au chocolat d'exception</h3>
-                    <h4>Et glace à la vanille de Madagascar<span class="tarif">22€</span></h4>
+                    <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Mousse au chocolat</h3>
-                    <h4>Au piment d'espelette et à la truffe noire<span class="tarif">23€</span></h4>
+                    <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="bouton">
                     <a href="#">Commander</a>
