--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -22,44 +22,72 @@
                     <i class="icone-vide-menu far fa-heart"></i>
                     <i class="icone-plein-menu fas fa-heart"></i>
                 </h1>
-                <h2>ENTREES</h2>
-                <div class="plat">
-                    <h3>Tartare de thon</h3>
-                    <h4>Assaisonné au yuzu<span class="tarif">25€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Bouchée de homard croustillant</h3>
-                    <h4>Et sa farandole de petits légumes<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Velouté de cèpes</h3>
-                    <h4>Aux truffes<span class="tarif">20€</span></h4>
-                </div>
-                <h2>PLATS</h2>
-                <div class="plat">
-                    <h3>Poulet rôti aux herbes de provence</h3>
-                    <h4>Et sa crème de truffe<span class="tarif">40€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Langouste rôtie</h3>
-                    <h4>Et ses légumes de saison<span class="tarif">35€</span></h4>
-                </div>
-                <div class="plat">
-                    <h3>Côte de boeuf angus</h3>
-                    <h4>Et sa purée de panais<span class="tarif">44€</span></h4>
-                </div>
+                <div class="carte-menu">    
+                    <h2>ENTREES</h2>
+                        <div class="descript-menu">
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu<span>25€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>et sa farandole de petit légumes<span>35€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                        <div class="descript-menu">
+                            <h3>Velouté de cêpes</h3>
+                            <p>Aux truffes<span>20€</span></p>
+                            <div class="anim-container">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    <h2>PLATS</h2>
+                    <div class="descript-menu">
+                        <h3>Poulet rôti aux herbes de provence</h3>
+                        <p>Et sa crème de truffes<span>40€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Langouste rôtie</h3>
+                        <p>Et ses légumes de saison<span>35€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="descript-menu">
+                        <h3>Côte de boeuf angus</h3>
+                        <p>Et sa purée de panais<span>44€</span></p>
+                        <div class="anim-container">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
                 <h2>DESSERTS</h2>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Farandole de desserts</h3>
-                    <h4>du chef<span class="tarif">18€</span></h4>
+                    <p>Du chef<span>18€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Crème brûlée</h3>
-                    <h4>Revisitée<span class="tarif">22€</span></h4>
+                    <p>Revisitée<span>22€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
-                <div class="plat">
+                <div class="descript-menu">
                     <h3>Tiramisu</h3>
-                    <h4>A la noisette<span class="tarif">23€</span></h4>
+                    <p>A la noisette<span>23€</span></p>
+                    <div class="anim-container">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
                 </div>
                 <div class="bouton">
                     <a href="#">Commander</a>
